--- a/i3/config
+++ b/i3/config
@@ -112,8 +112,10 @@ exec_always xset -dpms
 
 # Start audio and mic not too loud, and with mic muted
 # exec --no-startup-id amixer -D pulse sset Master 50% && $refresh_audio_icon
+# exec --no-startup-id amixer sset Capture 30% && amixer sset Capture nocap && $refresh_mic_icon
 exec --no-startup-id ~/.config/polybar/scripts/volume.sh set 50
-exec --no-startup-id amixer sset Capture 30% && amixer sset Capture nocap && $refresh_mic_icon
+exec --no-startup-id ~/.config/polybar/scripts/pulseaudio-microphone.sh --set 30
+exec --no-startup-id ~/.config/polybar/scripts/pulseaudio-microphone.sh --mute
 
 # Disable notebook things
 exec sh ~/scripts/disable-keyboard.sh
@@ -130,7 +132,7 @@ exec sh ~/scripts/setwallpaper.sh ~/Pictures/wallpapers/wall.jpg
 # set $refresh_i3_bar killall -SIGUSR1 i3blocks
 
 # Volume (i3 blocklet must have signal=10 matching this RTMIN+10)
-set $refresh_audio_icon pkill -RTMIN+10 i3blocks
+# set $refresh_audio_icon pkill -RTMIN+10 i3blocks
 # bindsym XF86AudioRaiseVolume  exec --no-startup-id amixer -D pulse sset Master 5%+ && $refresh_audio_icon
 # bindsym XF86AudioLowerVolume  exec --no-startup-id amixer -D pulse sset Master 5%- && $refresh_audio_icon
 # bindsym XF86AudioMute         exec --no-startup-id amixer -D pulse sset Master toggle && $refresh_audio_icon
@@ -143,27 +145,27 @@ bindsym $mod+period  exec --no-startup-id ~/.config/polybar/scripts/volume.sh in
 bindsym $mod+slash   exec --no-startup-id ~/.config/polybar/scripts/volume.sh toggle
 
 # Microphone (i3 blocklet must have signal=11 matching this RTMIN+11)
-set $refresh_mic_icon pkill -RTMIN+11 i3blocks
+# set $refresh_mic_icon pkill -RTMIN+11 i3blocks
 # bindsym XF86AudioMicMute    exec --no-startup-id amixer sset Capture nocap && $refresh_mic_icon
 # bindsym $mod+Control+comma  exec --no-startup-id amixer sset Capture 2%-  &&   $refresh_mic_icon
 # bindsym $mod+Control+period exec --no-startup-id amixer sset Capture 2%+  &&   $refresh_mic_icon
 # bindsym $mod+Control+slash  exec --no-startup-id amixer sset Capture toggle && $refresh_mic_icon
 # bindsym $mod+Shift+slash    exec --no-startup-id amixer sset Capture toggle && $refresh_mic_icon
 bindsym XF86AudioMicMute    exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --toggle &
-bindsym $mod+Control+comma  exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --increase &
-bindsym $mod+Control+period exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --decrease &
+bindsym $mod+Control+comma  exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --increase 2 &
+bindsym $mod+Control+period exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --decrease 2 &
 bindsym $mod+Control+slash  exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --toggle &
 bindsym $mod+Shift+slash    exec ~/.config/polybar/scripts/pulseaudio-microphone.sh --toggle &
 
 # Brightness (i3 blocklet must have signal=12 matching this RTMIN+12)
-set $refresh_brightness_icon pkill -RTMIN+12 i3blocks
+# set $refresh_brightness_icon pkill -RTMIN+12 i3blocks
 # bindsym $mod+bracketleft    exec xbacklight -dec 5 && $refresh_brightness_icon
 # bindsym $mod+bracketright   exec xbacklight -inc 5 && $refresh_brightness_icon
 bindsym $mod+bracketleft    exec ~/.config/polybar/scripts/brightness-poly.sh decrease 5
 bindsym $mod+bracketright   exec ~/.config/polybar/scripts/brightness-poly.sh increase 5
 
 # Turn off notifications
-set $refresh_notification_icon pkill -RTMIN+13 i3blocks
+# set $refresh_notification_icon pkill -RTMIN+13 i3blocks
 # bindsym $mod+n exec dunstctl set-paused toggle && $refresh_notification_icon
 bindsym $mod+n exec ~/.config/polybar/scripts/dunst-poly.sh toggle
 
